whisper/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
        - command:
            - python
            - app.py
            - --server_port
            - "7860"
            - --server_name
            - 0.0.0.0
          image: jhj0517/whisper-webui:latest
          name: app
          ports:
            - containerPort: 7860
              protocol: TCP
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /Whisper-WebUI/models
              name: app-claim0
            - mountPath: /Whisper-WebUI/outputs
              name: app-claim1
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
        - name: app-claim1
          persistentVolumeClaim:
            claimName: app-claim1
