whisper/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: mongo
    spec:
      securityContext:
        runAsGroup: 2000
        runAsUser: 0
        supplementalGroups:
        - 6
      containers:
        - args:
            - --logpath
            - /var/log/mongodb/mongod.log
          image: mongo
          name: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim2
            - mountPath: /var/log/mongodb
              name: mongo-claim3
      restartPolicy: Always
      volumes:
        - name: mongo-claim2
          persistentVolumeClaim:
            claimName: mongo-claim2
        - name: mongo-claim3
          persistentVolumeClaim:
            claimName: mongo-claim3
