whisper/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "7860"
      port: 7860
      targetPort: 7860
  selector:
    io.kompose.service: app
